[package]
name = "kn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
home = "0.5.3"
yaml-rust = "0.4.5"
serde = "1.0"
serde_yaml = "0.9"
colored = "2.0.0"
clap = { version = "4.0.18", features = ["derive"] }
anyhow = "1.0"
kube = { version = "0.75.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.16.0", features = ["v1_25"] }
tracing = "0.1.29"
tracing-subscriber = "0.3.3"
futures = "0.3.17"
tokio-util = "0.7.0"
tokio = { version = "1.14.0", features = ["full"] }
tokio-stream = { version = "0.1.9", features = ["net"] }
either = "1.6.1"
edit = "0.1.3"
serde_json = "1.0.68"

