
[package]
name = "kx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
home = "0.5.4"
yaml-rust = "0.4.5"
serde = "1.0"
serde_yaml = "0.9"
colored = "2.0.0"
clap = { version = "4.0.18", features = ["derive"] }
anyhow = "1.0"

[[bin]]
name = "kx"
path = "src/main.rs"